--- a/responsiveNavBarLab/index.html
+++ b/responsiveNavBarLab/index.html
@@ -11,12 +11,7 @@
         <header>
             <nav>
                 <ul>
-                    <li>
-                        <a id="logo" href="#">
-                            LOGO
-                            <img alt="crystal" src="assets/images/mothercrystal.jpeg">
-                        </a>
-                    </li>
+                    <li><a id="logo" href="#">LOGO</a></li>
                     <li><a href="#">Link 1</a></li>
                     <li class="dropdown">
                         <a href="#">Link 2</a>
