--- a/responsiveNavBarLab/index.html
+++ b/responsiveNavBarLab/index.html
@@ -11,22 +11,48 @@
         <header>
             <nav>
                 <ul>
-                    <li><a id="logo" href="#">LOGO</a></li>
-                    <li><a href="#">Link 1</a></li>
+                    <li><a id="logo" href="index.html">LOGO</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li class="dropdown">
-                        <a href="#">Link 2</a>
+                        <a href="world.html">World</a>
                         <ul>
-                            <li><a href="#">Inner Link 1</a></li>
-                            <li><a href="#">Inner Link 2</a></li>
-                            <li><a href="#">Inner Link 3</a></li>
+                            <li><a href="#">Aldenard</a></li>
+                            <li><a href="#">Othard</a></li>
+                            <li><a href="#">Ilsabard</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Link 3</a></li>
+                    <li><a href="races.html">Races</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <img alt="World Map" src="assets/images/Map_World.jpeg">
+            <img id="hero" alt="World Map" src="assets/images/Map_World.jpeg">
+            <section class="textAndImage">
+                <div class="imageBlock">
+                    <img alt="hyur" src="assets/images/Race_Hyur.png">
+                </div>
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, asperiores voluptate. Hic mollitia, ad non tenetur eum esse neque, enim ratione quos praesentium repellendus? Adipisci numquam vel suscipit a quis?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam dolorum, quaerat natus voluptas esse id dignissimos similique adipisci ipsum maxime illo vitae hic saepe necessitatibus pariatur corrupti alias vel eveniet!
+                    </p>
+                </div>
+            </section>
+            <section class="textAndImage">
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, asperiores voluptate. Hic mollitia, ad non tenetur eum esse neque, enim ratione quos praesentium repellendus? Adipisci numquam vel suscipit a quis?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam dolorum, quaerat natus voluptas esse id dignissimos similique adipisci ipsum maxime illo vitae hic saepe necessitatibus pariatur corrupti alias vel eveniet!
+                    </p>
+                </div>
+                <div class="imageBlock">
+                    <img alt="miqote" src="assets/images/Race_Miqo'te.png">
+                </div>
+            </section>
         </main>
     </body>
 </html>
