--- a/responsiveNavBarLab/index.html
+++ b/responsiveNavBarLab/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>FFXIV Lore</title>
         <link href="css/style.css" rel="stylesheet">
+        <link href="css/navbar.css" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -31,22 +32,22 @@
                 <div class="imageBlock">
                     <img alt="hyur" src="assets/images/Race_Hyur.png">
                 </div>
-                <div>
+                <div class="textBlock">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, asperiores voluptate. Hic mollitia, ad non tenetur eum esse neque, enim ratione quos praesentium repellendus? Adipisci numquam vel suscipit a quis?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore minus sunt ea, dignissimos beatae similique repellat quos animi hic nulla molestias itaque eaque quia nostrum, facilis facere odit harum laborum.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam dolorum, quaerat natus voluptas esse id dignissimos similique adipisci ipsum maxime illo vitae hic saepe necessitatibus pariatur corrupti alias vel eveniet!
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quam possimus totam quis quasi, libero reiciendis at fugiat qui porro magnam sequi delectus modi laboriosam asperiores neque esse est tempora?
                     </p>
                 </div>
             </section>
             <section class="textAndImage">
-                <div>
+                <div class="textBlock">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, asperiores voluptate. Hic mollitia, ad non tenetur eum esse neque, enim ratione quos praesentium repellendus? Adipisci numquam vel suscipit a quis?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore minus sunt ea, dignissimos beatae similique repellat quos animi hic nulla molestias itaque eaque quia nostrum, facilis facere odit harum laborum.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam dolorum, quaerat natus voluptas esse id dignissimos similique adipisci ipsum maxime illo vitae hic saepe necessitatibus pariatur corrupti alias vel eveniet!
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quam possimus totam quis quasi, libero reiciendis at fugiat qui porro magnam sequi delectus modi laboriosam asperiores neque esse est tempora?
                     </p>
                 </div>
                 <div class="imageBlock">
