--- a/fiveGalleries/index.html
+++ b/fiveGalleries/index.html
@@ -48,6 +48,43 @@
                 <img src="assets/images/coffee_L2.jpg" alt="coffee">
                 <img src="assets/images/coffee_P3.jpg" alt="coffee">
             </div>
+            <h2>Gallery 4 - Flexbox (Vertical)</h2>
+            <div id="gallery4">
+                <img src="assets/images/coffee_L1.jpg" alt="coffee">
+                <img src="assets/images/coffee_P1.jpg" alt="coffee">
+                <img src="assets/images/coffee_S3.jpg" alt="coffee">
+                <img src="assets/images/coffee_L3.jpg" alt="coffee">
+                <img src="assets/images/coffee_P4.jpg" alt="coffee">
+                <img src="assets/images/coffee_S1.jpg" alt="coffee">
+                <img src="assets/images/coffee_L4.jpg" alt="coffee">
+                <img src="assets/images/coffee_S2.jpg" alt="coffee">
+                <img src="assets/images/coffee_L2.jpg" alt="coffee">
+                <img src="assets/images/coffee_P3.jpg" alt="coffee">
+            </div>
+            <h2>Gallery 5 - CSS Columns</h2>
+            <div id="gallery5">
+                <img src="assets/images/coffee_L1.jpg" alt="coffee">
+                <img src="assets/images/coffee_P1.jpg" alt="coffee">
+                <img src="assets/images/coffee_S3.jpg" alt="coffee">
+                <img src="assets/images/coffee_L3.jpg" alt="coffee">
+                <img src="assets/images/coffee_P4.jpg" alt="coffee">
+                <img src="assets/images/coffee_S1.jpg" alt="coffee">
+                <img src="assets/images/coffee_L4.jpg" alt="coffee">
+                <img src="assets/images/coffee_S2.jpg" alt="coffee">
+                <img src="assets/images/coffee_L2.jpg" alt="coffee">
+                <img src="assets/images/coffee_P3.jpg" alt="coffee">
+            </div>
+            <h2>My FFXIV Gallery</h2>
+            <div id="gallery3">
+                <img src="assets/images/hienAndLyse.webp" alt="coffee">
+                <img src="assets/images/ishgard.webp" alt="coffee">
+                <img src="assets/images/reaperbun.jpeg" alt="coffee">
+                <img src="assets/images/shadowbringers.png" alt="coffee">
+                <img src="assets/images/sharlyan.jpeg" alt="coffee">
+                <img src="assets/images/steelvigil.webp" alt="coffee">
+                <img src="assets/images/thefirst.jpeg" alt="coffee">
+                <img src="assets/images/yotsuya.jpeg" alt="coffee">
+            </div>
         </section>
     </body>
 </html>
