--- a/scratchpad/fbform/index.html
+++ b/scratchpad/fbform/index.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <section id="formContainer">
-            <header></header>
+            <header>
+                <img src="assets/images/fblogo.png">
+            </header>
             <div id="formContent">
                 <form>
                     <div id="formHeader">
