--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,15 +58,15 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for Day 12 (01/24)</h1>
+    <h1>GDWD 105 Agenda for Day 13 (01/25)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Review Kahoots (Flexbox & Inline/Block)</h2>
-      <h2>Period 2 (6:30-7:20): Intro to CSS Grids</h2>
-      <h2>Period 3 (8:10-9:50): 5 Galleries Exercise</h2>
-      <h2>Period 4 (10:00-10:50): 5 Galleries Exercise (cont.)</h2>
+      <h2>Period 1 (5:30-6:20): Intro to Forms</h2>
+      <h2>Period 2 (6:30-7:20): Contact Forms Lab</h2>
+      <h2>Period 3 (8:10-9:50): FB Forms Exercise</h2>
+      <h2>Period 4 (10:00-10:50): FB Forms Exercise</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
