--- a/contactForm/index.html
+++ b/contactForm/index.html
@@ -36,7 +36,9 @@
                     <textarea 
                         name="message" 
                         placeholder="Type your message here..."></textarea>
-                    <input type="submit" name="send" value="Send">
+                    <div id="buttonContainer">
+                        <input type="submit" name="send" value="Send">
+                    </div>
                 </form>
             </div>
         </section>
