--- a/fbForm/index.html
+++ b/fbForm/index.html
@@ -65,6 +65,41 @@
                                 <input type="checkbox" name="isPublic">
                             </div>
                         </div>
+                        <div id="genderRadioButtons">
+                            <label>Gender</label>
+                            <div id="genderInputs">
+                                <div>
+                                    <label for="femaleRadio">
+                                        Female
+                                    </label>
+                                    <input 
+                                        id="femaleRadio"
+                                        type="radio" 
+                                        name="gender" 
+                                        value="female">
+                                </div>
+                                <div>
+                                    <label for="maleRadio">
+                                        Male
+                                    </label>
+                                    <input 
+                                        id="maleRadio"
+                                        type="radio"
+                                        name="gender"
+                                        value="male">
+                                </div>
+                                <div>
+                                    <label for="customRadio">
+                                        Custom
+                                    </label>
+                                    <input
+                                        id="customRadio"
+                                        type="radio"
+                                        name="gender"
+                                        value="custom">
+                                </div>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
