--- a/fbForm/index.html
+++ b/fbForm/index.html
@@ -32,12 +32,12 @@
                                 placeholder="Last name">
                             <input 
                                 id="phoneOrEmailInput"
-                                type="text" 
+                                type="email" 
                                 name="phoneOrEmail"
                                 placeholder="Mobile number or email">
                             <input 
                                 id="passwordInput"
-                                type="text" 
+                                type="password" 
                                 name="password"
                                 placeholder="New password">
                         </div>
@@ -100,6 +100,26 @@
                                 </div>
                             </div>
                         </div>
+                        <p>
+                            People who use our service may have
+                            uploaded your contact information
+                            to Facebook. <a href=#>Learn more.</a>
+                        </p>
+                        <p>
+                            By clicking Sign Up, you agree
+                            to our <a href="#">Terms</a>, 
+                            <a href="#">Privacy Policy</a>,
+                            and <a href="#">Cookies Policy</a>. 
+                            You may
+                            receive SMS Notifications from 
+                            us and can opt out any time.
+                        </p>
+                        <input type="submit" value="Sign Up">
+                        <a 
+                            id="login" 
+                            href="#">
+                            Already have an account?
+                        </a>
                     </form>
                 </div>
             </div>
