--- a/contactForm/index.html
+++ b/contactForm/index.html
@@ -19,7 +19,9 @@
                 </p>
             </header>
             <div id="formContainer">
-                <form>
+                <form 
+                    action="https://getform.io/f/66453f25-d75b-49eb-b6ee-ef9baf943c62"
+                    method="POST">
                     <label>What can we help you with?</label>
                     <select name="questionType">
                         <option value="" disabled selected>-- Select what we can help you with --</option>
@@ -29,9 +31,15 @@
                         <option value="adRemoval">Need a break from ads</option>
                     </select>
                     <label>Name</label>
-                    <input type="text" name="name">
+                    <input 
+                        type="text" 
+                        name="name" 
+                        minlength="3" 
+                        maxlength="50" 
+                        required
+                        placeholder="First and Last Name">
                     <label>Email</label>
-                    <input type="text" name="email">
+                    <input type="text" name="email" placeholder="myname@something.com">
                     <label>Message</label>
                     <textarea 
                         name="message" 
