--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -63,10 +63,10 @@
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): FB Forms Exercise PT2</h2>
-      <h2>Period 2 (6:30-7:20): FB Forms Exercise PT2</h2>
-      <h2>Period 3 (8:10-9:50): FB Forms Exercise PT2? | Contact Form Lab PT2</h2>
-      <h2>Period 4 (10:00-10:50): Contact Form Lab PT2</h2>
+      <h2>Period 1 (5:30-6:20): Title IX Presentation</h2>
+      <h2>Period 2 (6:30-7:20): Quiz 4 Kahoot Review</h2>
+      <h2>Period 3 (8:10-9:50): Lab Time</h2>
+      <h2>Period 4 (10:00-10:50): Lab Time</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
