--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,15 +58,15 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for Day 15 (01/27)</h1>
+    <h1>GDWD 105 Agenda for Day 16 (01/30)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Title IX Presentation</h2>
-      <h2>Period 2 (6:30-7:20): Quiz 4 Kahoot Review</h2>
-      <h2>Period 3 (8:10-9:50): Lab Time</h2>
-      <h2>Period 4 (10:00-10:50): Lab Time</h2>
+      <h2>Period 1 (5:30-6:20): Quiz 4</h2>
+      <h2>Period 2 (6:30-7:20): Hero Components</h2>
+      <h2>Period 3 (8:10-9:50): Hero Components (cont.) | Parallax Hero Exercise</h2>
+      <h2>Period 4 (10:00-10:50): Parallax Hero Exercise</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
