--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,15 +58,15 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for Day 17 (01/31)</h1>
+    <h1>GDWD 105 Agenda for Day 18 (02/01)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Previous Exercise Challenge | Intro to Bootstrap</h2>
-      <h2>Period 2 (6:30-7:20): Bootstrap Grids</h2>
-      <h2>Period 3 (8:10-9:50): Bootstrap Components</h2>
-      <h2>Period 4 (10:00-10:50): Bootstrap Gallery Exercise</h2>
+      <h2>Period 1 (5:30-6:20): HTML Children & CSS Selectors Review Kahoots</h2>
+      <h2>Period 2 (6:30-7:20): Bootstrap Carousel</h2>
+      <h2>Period 3 (8:10-9:50): Bootstrap Carousel | Bootstrap Portal</h2>
+      <h2>Period 4 (10:00-10:50): Bootstrap Portal</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
