new landing page

--- a/index.html
+++ b/index.html
@@ -1,193 +1,91 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>GDWD 105 NEXUS</title>
-    <style>
-      body {
-        text-align: center;
-      }
-      .root {
-        font-family: Verdana, sans-serif;
-        text-align: center;
-        columns: 3 auto;
-      }
-      .portfolio {
-        display: inline-block;
-        margin-top: 24px;
-        text-align: center;
-        width: 440px;
-      }
-
-      .portfolio a {
-        background-color: #DFDFDF;
-        display: inline-block;
-        height: 100%;
-        padding: 12px;
-        width: 42%;
-      }
-      @media screen and (max-width: 1300px) {
-        .root {
-          columns: 2 auto;
-        }
-      }
-      @media screen and (max-width: 800px) {
-        .root {
-          columns: 1 auto;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <!-- <h1>Portfolio Nexus</h1>
-    <h2>
-      These are the Portfolios and Repositories of my wonderful students!
-    </h2>
-    <div class="root">
-      <div class="portfolio">
-        <a href="https://akimah.github.io/Portfolio/" target="_blank">
-          Akimah's Portfolio
-        </a>
-        <a href="https://github.com/akimah/Portfolio/tree/main/108" target="_blank">
-          Akimah's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://Akirsch97.github.io/Portfolio/" target="_blank">
-          Ashley's Portfolio
-        </a>
-        <a href="https://github.com/Akirsch97/Portfolio/tree/main/108Assignments" target="_blank">
-          Ashley's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://avamurray.github.io/Portfolio/" target="_blank">
-          Ava's Portfolio
-        </a>
-        <a href="https://github.com/AvaMurray/Portfolio/" target="_blank">
-          Ava's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://demondtwyman.github.io/portfolio/" target="_blank">
-          Demond's Portfolio
-        </a>
-        <a href="https://github.com/DemondTwyman/portfolio" target="_blank">
-          Demond's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://jggithub16.github.io/" target="_blank">
-          Jules's Portfolio
-        </a>
-        <a href="https://github.com/JGGithub16/JGGithub16.github.io" target="_blank">
-          Jules's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://leilani1218.github.io/Leilani1218.github.io-/" target="_blank">
-          Leilani's Portfolio
-        </a>
-        <a href="https://github.com/leilani1218/Leilani1218.github.io-" target="_blank">
-          Leilani's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://leon3242wlll.github.io/Leon3234wlll.github.io/" target="_blank">
-          Leon's Portfolio
-        </a>
-        <a href="https://github.com/Leon3242wlll/Leon3234wlll.github.io" target="_blank">
-          Leon's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://leowill25.github.io/portfolio/" target="_blank">
-          Leonard's Portfolio
-        </a>
-        <a href="https://github.com/LeoWill25/portfolio" target="_blank">
-          Leonard's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://louietrouie.github.io/Portfolio-first_LovenskiJean/" target="_blank">
-          Lovinski's Portfolio
-        </a>
-        <a href="https://github.com/LouieTrouie/Portfolio-first_LovenskiJean/tree/main/Assigments.html" target="_blank">
-          Lovinski's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://que22.github.io/Portfolio-first/" target="_blank">
-          Q's Portfolio
-        </a>
-        <a href="https://github.com/Que22/Portfolio-first" target="_blank">
-          Q's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://io-rocavi.github.io/Portfolio/" target="_blank">
-          Roberto's Portfolio
-        </a>
-        <a href="https://github.com/io-rocavi/Portfolio" target="_blank">
-          Roberto's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://shanekawhitlock.github.io/portfolio/" target="_blank">
-          Shaneka's Portfolio
-        </a>
-        <a href="https://github.com/shanekawhitlock/portfolio" target="_blank">
-          Shaneka's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://soemiediaz.github.io/Portfolio/" target="_blank">
-          Soemie's Portfolio
-        </a>
-        <a href="https://github.com/SoemieDiaz/Portfolio/tree/main/GDWD%20108" target="_blank">
-          Soemie's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://Thischicksuze.github.io/Portfolio/" target="_blank">
-          Suzzanna's Portfolio
-        </a>
-        <a href="https://github.com/Thischicksuze/Portfolio/tree/main/Assignments/108" target="_blank">
-          Suzzanna's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://sydneyfrazier.github.io/portfolio1/" target="_blank">
-          Sydney's Portfolio
-        </a>
-        <a href="https://github.com/sydneyfrazier/portfolio1" target="_blank">
-          Sydney's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://tessdelcar.github.io/Portfolio-first/" target="_blank">
-          Tess's Portfolio
-        </a>
-        <a href="https://github.com/tessdelcar/Portfolio-first/tree/main/108" target="_blank">
-          Tess's Repository
-        </a>
-      </div>
-
-
-    </div> -->
-  </body>
+    <head>
+        <title>GDWD 105 NEXUS</title>
+        <!-- This is the link to use Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <link href="css/style.css" rel="stylesheet">
+    </head>
+    <body>
+        <div id="hero">
+            <h1>105 Portfolio Portal</h1>
+        </div>
+        <div class="container">
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Projects
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <ul>
+                                <li><a href="wikiPagePt2/index.html">Wiki Page Project</a></li>
+                                <li><a href="responsiveNavBarLab/">
+                                    <img src="assets/images/abstractBackground2.jpg" style="width: 50px">
+                                </a></li>
+                                <li><a href="#">Project 3</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Exercises
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <div class="card-group">
+                                <div class="card">
+                                    <img src="assets/images/abstractBackground2.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <a class="btn btn-primary" href="tablesExercise">
+                                            Tables Exercise
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <img src="assets/images/abstractBackground2.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <a class="btn btn-primary" href="tablesExercise">
+                                            Tables Exercise
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <img src="assets/images/abstractBackground2.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <a class="btn btn-primary" href="tablesExercise">
+                                            Tables Exercise
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Examples
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <ul>
+                                <li><a href="#">Example 1</a></li>
+                                <li><a href="#">Example 2</a></li>
+                                <li><a href="#">Example 3</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- This is the script to use Bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    </body>
 </html>
