--- a/scratchpad/105_starter_template_2/index.html
+++ b/scratchpad/105_starter_template_2/index.html
@@ -17,7 +17,7 @@
           <li><a href="#">Contact</a></li>
         </ul>
         <ul class="socialMedia">
-          <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+          <li><a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
