--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                         <div class="accordion-body">
                             <div class="card-group">
                                 <div class="card">
-                                    <img src="assets/images/abstractBackground2.jpg" class="card-img-top" alt="...">
+                                    <a href="examples6010/heroes.html">
+                                        <img src="assets/images/abstractBackground2.jpg" class="card-img-top" alt="...">
+                                    </a>
                                     <div class="card-body">
                                         <a href="examples6010/heroes.html">Heroes</a>
                                     </div>
@@ -47,12 +49,28 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Accordion Item #2
+                            Examples
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            <ul>
+                                <li>
+                                    <a href="examples6010/grids.html">
+                                        Grid
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="examples6010/heroes.html">
+                                        Heroes
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="fiveGalleries">
+                                        Five Galleries
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
