--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -65,7 +65,7 @@
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
       <h2>Period 1 (5:30-6:20): Lab Time (Portfolio Portal)</h2>
       <h2>Period 2 (6:30-7:20): Lab Time (Portfolio Portal)</h2>
-      <h2>Period 3 (8:10-9:50): Lab Time (Foxtail Farms Lab)</h2>
+      <h2>Period 3 (8:10-9:50): Kahoot | Lab Time (Foxtail Farms Lab)</h2>
       <h2>Period 4 (10:00-10:50): Lab Time (Foxtail Farms Lab)</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
