--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,15 +58,15 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for Day 20 (02/03)</h1>
+    <h1>GDWD 105 Agenda for Day 21 (02/06)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Lab Time (Portfolio Portal)</h2>
-      <h2>Period 2 (6:30-7:20): Lab Time (Portfolio Portal)</h2>
-      <h2>Period 3 (8:10-9:50): Kahoot | Lab Time (Foxtail Farms Lab)</h2>
-      <h2>Period 4 (10:00-10:50): Lab Time (Foxtail Farms Lab)</h2>
+      <h2>Period 1 (5:30-6:20): Quiz 5 - Bootstrap and Responsive Layouts</h2>
+      <h2>Period 2 (6:30-7:20): Intro to CMS</h2>
+      <h2>Period 3 (8:10-9:50): Building your WordPress Sites</h2>
+      <h2>Period 4 (10:00-10:50): Pages, Posts, and the Block Editor</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
