--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -87,7 +87,12 @@
       </h2>
       <h2>
         Last Day to Turn In Late Assignments:
-        <br>Day 5 of the week the Exercise/Project was assigned in
+        <br>Day 5 of the week the Exercise was assigned in
+      </h2>
+      <h3>(Anything turned in past this won't be graded)</h3>
+      <h2>
+        Last Day to Resubmit Projects:
+        <br>Day 5 of the following week the Project was assigned in
       </h2>
       <h3>(Anything turned in past this won't be graded)</h3>
     </div>
