--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -63,10 +63,10 @@
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): SEO and Yoast</h2>
-      <h2>Period 2 (6:30-7:20): Process Post #3</h2>
-      <h2>Period 3 (8:10-9:50): Process Post #3 | Building your Gallery</h2>
-      <h2>Period 4 (10:00-10:50): Building your Gallery</h2>
+      <h2>Period 1 (5:30-6:20): Menus Exercise | More Gallery Lab Time</h2>
+      <h2>Period 2 (6:30-7:20): More Gallery Lab Time</h2>
+      <h2>Period 3 (8:10-9:50): More Gallery Lab Time | Process Post #4</h2>
+      <h2>Period 4 (10:00-10:50): Process Post #4</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
