--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,15 +58,15 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for Day 30 (02/17)</h1>
+    <h1>GDWD 105 Agenda for Day 31 (02/21)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Lab Time</h2>
+      <h2>Period 1 (5:30-6:20): Quiz Review Kahoot</h2>
       <h2>Period 2 (6:30-7:20): Lab Time</h2>
-      <h2>Period 3 (8:10-9:50): Critiques - Kwan, JP, Kayla D, Juan B, Azjah, Landon</h2>
-      <h2>Period 4 (10:00-10:50): Quiz Review Kahoot </h2>
+      <h2>Period 3 (8:10-9:50): Critiques - Erica, Jovanni, Jenn, Cameron, Kayla B, Jamir</h2>
+      <h2>Period 4 (10:00-10:50): Critiques Overflow | Lab Time </h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
