--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,14 +58,14 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for Day 33 (02/23)</h1>
+    <h1>GDWD 105 Agenda for Day 34 (02/24)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
       <h2>Period 1 (5:30-6:20): Lab Time</h2>
       <h2>Period 2 (6:30-7:20): Lab Time</h2>
-      <h2>Period 3 (8:10-9:50): JavaScript Data Types and Variables</h2>
+      <h2>Period 3 (8:10-9:50): More JS: The Boolean Data Type & DOM Manipulation</h2>
       <h2>Period 4 (10:00-10:50): Lab Time </h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
