--- a/examples6010/basicJavaScript.html
+++ b/examples6010/basicJavaScript.html
@@ -9,6 +9,7 @@
     <body id="myBodyElement">
         <!-- <script src="js/primitiveDataTypes.js"></script> -->
         <!-- <script src="js/variables.js"></script> -->
-        <script src="js/domManipulation.js"></script>
+        <!-- <script src="js/domManipulation.js"></script> -->
+        <script src="js/functionsAndObjects.js"></script>
     </body>
 </html>
