--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,15 +58,15 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for Day 36 (02/28)</h1>
+    <h1>GDWD 105 Agenda for Day 37 (03/01)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Quiz and Review Kahoot(s)</h2>
-      <h2>Period 2 (6:30-7:20): Functions Demo</h2>
-      <h2>Period 3 (8:10-9:50): Countdown Assignment Demo</h2>
-      <h2>Period 4 (10:00-10:50): Dejavu Demo </h2>
+      <h2>Period 1 (5:30-6:20): Review Kahoots</h2>
+      <h2>Period 2 (6:30-7:20): Calculator Assn Dejavu Demo</h2>
+      <h2>Period 3 (8:10-9:50): Lightbox Gallery Part 1 Dejavu Demo</h2>
+      <h2>Period 4 (10:00-10:50): Demo(s) continued</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
