--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -73,7 +73,7 @@
     <!-- <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem warning">
-        <span>Critiques for Evan M, Devon, Jessica, Crystiana, and Desiree</span>
+        <span>Critiques for</span>
         <span>Due yesterday</span>
       </h2>
     </div> -->
