light/dark/sepia

--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -63,10 +63,10 @@
       <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Review Kahoots</h2>
-      <h2>Period 2 (6:30-7:20): Calculator Assn Dejavu Demo</h2>
-      <h2>Period 3 (8:10-9:50): Lightbox Gallery Part 1 Dejavu Demo</h2>
-      <h2>Period 4 (10:00-10:50): Demo(s) continued</h2>
+      <h2>Period 1 (5:30-6:20): Conditionals | Light/Dark Mode</h2>
+      <h2>Period 2 (6:30-7:20): Conditionals cont.</h2>
+      <h2>Period 3 (8:10-9:50): Event Handlers | Navbar Assignment</h2>
+      <h2>Period 4 (10:00-10:50): Lightbox Pt 2</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
