--- a/examples6010/lightdark.html
+++ b/examples6010/lightdark.html
@@ -4,18 +4,18 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Light/Dark Mode</title>
+        <title>Light/Dark Example</title>
     </head>
     <body id="body">
         <header id="header">
-            <button id="modeToggle">Toggle Light/Dark Mode</button>
+            <button id="modeToggle">Light/Dark Mode Toggle</button>
         </header>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam pellentesque nec nam aliquam sem. Massa tempor nec feugiat nisl pretium fusce id velit. Tempor commodo ullamcorper a lacus vestibulum. Cursus turpis massa tincidunt dui ut. Tellus in metus vulputate eu scelerisque felis imperdiet proin. Sed felis eget velit aliquet. Proin libero nunc consequat interdum varius. Massa enim nec dui nunc. In hendrerit gravida rutrum quisque non.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt eius, ipsa, dicta sed, suscipit excepturi facere itaque aspernatur ad exercitationem eaque ratione obcaecati modi voluptas! Enim repudiandae provident dolorum est.
         </p>
         <p>
-            Integer feugiat scelerisque varius morbi enim. Lorem donec massa sapien faucibus et molestie. Sed blandit libero volutpat sed cras ornare arcu. Nulla facilisi morbi tempus iaculis. In hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies. Cursus euismod quis viverra nibh cras pulvinar mattis. Ornare lectus sit amet est placerat. Iaculis at erat pellentesque adipiscing commodo elit. Non odio euismod lacinia at quis risus. Purus semper eget duis at tellus at. Etiam dignissim diam quis enim lobortis scelerisque. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Velit dignissim sodales ut eu sem integer vitae justo. Ut tortor pretium viverra suspendisse potenti nullam ac tortor vitae. Varius morbi enim nunc faucibus a pellentesque sit amet porttitor. Blandit cursus risus at ultrices mi tempus. Aliquam sem fringilla ut morbi tincidunt augue.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, sed aut distinctio a quisquam amet nam ut aspernatur, veritatis maxime, inventore voluptatum illo. Assumenda exercitationem beatae non perspiciatis molestiae ipsum.
         </p>
-        <script src="js/conditionals.js"></script>
+        <script src="js/lightdark.js"></script>
     </body>
 </html>
