--- a/lightbox/index.html
+++ b/lightbox/index.html
@@ -10,7 +10,7 @@
     <img id="coffeeImage" src="images/coffee_L1.jpg" alt="coffee">
 
     <!-- Lightbox Code -->
-    <div id="lightboxContainer">
+    <div id="lightboxContainer" class="display">
       <div id="lightboxBackground" class="closer"></div>
       <img id="lightbox" src="" alt="">
       <span id="lightboxCloser" class="closer">×</span>
