--- a/lightbox/index.html
+++ b/lightbox/index.html
@@ -7,10 +7,16 @@
   </head>
   <body>
     <!-- Gallery/Image Code -->
-    <img id="coffeeImage" src="images/coffee_L1.jpg" alt="coffee">
+    <div id="gallery">
+        <img class="galleryImage" src="images/abstract8.jpg" alt="abstract1">
+        <img class="galleryImage" src="images/abstractBackground2.jpg" alt="abstract2">
+        <img class="galleryImage" src="images/abstractBackground3.jpg" alt="abstract3">
+        <img class="galleryImage" src="images/abstractBackground4.jpg" alt="abstract4">
+        <img class="galleryImage" src="images/abstractBackground5.jpg" alt="abstract5">
+    </div>
 
     <!-- Lightbox Code -->
-    <div id="lightboxContainer" class="display">
+    <div id="lightboxContainer">
       <div id="lightboxBackground" class="closer"></div>
       <img id="lightbox" src="" alt="">
       <span id="lightboxCloser" class="closer">×</span>
