--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,14 +58,14 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for Day 39 (03/03)</h1>
+    <h1>GDWD 105 Agenda for Day 40 (03/06)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Arrays Demo</h2>
-      <h2>Period 2 (6:30-7:20): Loops Demo</h2>
-      <h2>Period 3 (8:10-9:50): Lightbox Lab - Part 3</h2>
+      <h2>Period 1 (5:30-6:20): Lab Time</h2>
+      <h2>Period 2 (6:30-7:20): Lab Time</h2>
+      <h2>Period 3 (8:10-9:50): Lab Time</h2>
       <h2>Period 4 (10:00-10:50): Finale - Snake Cursor Demo</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
@@ -86,15 +86,15 @@
         Late Projects: 21% penalty
       </h2>
       <h2>
-        Last Day to Turn In Late Assignments:
-        <br>Day 5 of the week the Exercise was assigned in
+        Last Day to Turn In ANYTHING:
+        <br>Friday, March 10th
       </h2>
       <h3>(Anything turned in past this won't be graded)</h3>
-      <h2>
+      <!-- <h2>
         Last Day to Resubmit Projects:
         <br>Day 5 of the following week the Project was assigned in
       </h2>
-      <h3>(Anything turned in past this won't be graded)</h3>
+      <h3>(Anything turned in past this won't be graded)</h3> -->
     </div>
 
     <!-- <h1>Syllabus</h1>
