--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -37,7 +37,7 @@
       }
       .agendaItem span:first-child {
 
-        width: 200px;
+        width: 250px;
       }
       .agendaItem span:not(:first-child) {
         flex: 1;
@@ -66,7 +66,7 @@
       <h2>Period 1 (5:30-6:20): Quiz #9</h2>
       <h2>Period 2 (6:30-7:20): Netflix Demo</h2>
       <h2>Period 3 (8:10-9:50): JS Frame-by-Frame Animation Assignment</h2>
-      <h2>Period 4 (10:00-10:50): Lab Time</h2>
+      <h2>Period 4 (10:00-10:50): Final Exam Kahoot Review | Lab Time</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
@@ -97,29 +97,30 @@
       <h3>(Anything turned in past this won't be graded)</h3> -->
     </div>
 
-    <!-- <h1>Syllabus</h1>
+    <h1>End of Class Syllabus</h1>
     <div id="agenda">
       <div class="agendaItem done">
-        <span>12/05 (Day 01)</span>
-        <span>Photoshop/InDesign - Planning Assignments and Critiques Part 1</span>
+        <span>3/07 (Tues - W9 Day 41)</span>
+        <span>Frame-by-Frame JS Animation</span>
       </div>
-      <div class="agendaItem done">
-        <span>12/06 (Day 02)</span>
-        <span>Photoshop/InDesign - Critiques Part 2</span>
+      <div class="agendaItem ">
+        <span>3/08 (Wed - W9 Day 42)</span>
+        <span>JS Animation</span>
       </div>
-      <div class="agendaItem done">
-        <span>12/07 (Day 03)</span>
-        <span>Photoshop/InDesign - Lab Day</span>
+      <div class="agendaItem ">
+        <span>3/09 (Thurs - W9 Day 43)</span>
+        <span>JS Animation</span>
       </div>
-      <div class="agendaItem done">
-        <span>12/08 (Day 04)</span>
-        <span>Photoshop/InDesign - Lab Day</span>
+      <div class="agendaItem ">
+        <span>3/10 (Fri - W9 Day 44)</span>
+        <span>FINAL EVAL</span>
       </div>
-      <div class="agendaItem done">
-        <span>12/09 (Day 05)</span>
-        <span>Photoshop/InDesign - Presentations and Project Turn-in Assignments</span>
+      <br>
+      <div class="agendaItem ">
+        <span>3/13 (Mon - W9 Day 45)</span>
+        <span>FINAL EXAM</span>
       </div>
-      <br><br> -->
+      <br><br>
       <!-- <div class="agendaItem done">
         <span>12/12 (Day 06)</span>
         <span>Illustrator/Motion Graphics - Planning Assignments and Critiques Part 1</span>
