--- a/lightbox/index.html
+++ b/lightbox/index.html
@@ -4,8 +4,35 @@
     <title>Lightbox Gallery</title>
     <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href="css/lightbox.css">
+    <link rel="stylesheet" href="css/netflix.css">
   </head>
   <body>
+    <div id="banner">
+        <div id="new">NEW!</div>
+        <div>Plans now start at <span id="price">$6.99</span></div>
+        <div>
+            <a href="#">Learn More ></a>
+        </div>
+    </div>
+    <div id="hero">
+        <nav id="navBar">
+            <img 
+                src="images/Netflix_Logo_RGB.png"
+                alt="netflix logo">
+            <button class="clearButton">English</button>
+            <button class="redButton">Sign In</button>
+        </nav>
+        <div id="heroContent">
+            <h1>Unlimited movies, TV shows, and more.</h1>
+            <h3>Watch anywhere. Cancel anytime.</h3>
+            <p>Ready to watch? Enter your email to create or restart your membership.</p>
+            <form>
+                <input type="email" name="emailAddress" placeholder="Email address">
+                <input type="submit" class="redButton" value="Get Started >">
+            </form>
+        </div>
+    </div>
+
     <!-- Gallery/Image Code -->
     <div id="gallery">
         <img class="galleryImage" src="images/abstract8.jpg" alt="abstract1">
