--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -103,13 +103,13 @@
         <span>3/07 (Tues - W9 Day 41)</span>
         <span>Frame-by-Frame JS Animation</span>
       </div>
-      <div class="agendaItem ">
+      <div class="agendaItem done">
         <span>3/08 (Wed - W9 Day 42)</span>
-        <span>JS Animation - GreenSock Pt 1</span>
+        <span>JS Animation - GreenSock</span>
       </div>
       <div class="agendaItem ">
         <span>3/09 (Thurs - W9 Day 43)</span>
-        <span>JS Animation - GreenSock Pt 2</span>
+        <span>Finals Review</span>
       </div>
       <div class="agendaItem ">
         <span>3/10 (Fri - W9 Day 44)</span>
