--- a/examples6010/lastExample.html
+++ b/examples6010/lastExample.html
@@ -8,52 +8,54 @@
         <link href="css/lastExample.css" rel="stylesheet">
     </head>
     <body>
-        <div id="flexbox1" class="leftLogo">
-            <div id="logo" class="box red">
-                <a id="heroLink" href="#">Hero</a>
-            </div>
-            <div class="box blue">
-                <a id="flexboxGridLink" href="#">Flexbox Grid</a>
-            </div>
-            <div class="box green">
-                <a id="gridLink" href="#">Grid</a>
-            </div>
-        </div>
-        <div id="flexbox2" class="center column">
+        <nav>
+            <ul id="flexbox1" class="spreadRestricted">
+                <li id="logo" class="red">
+                    <a href="#" id="heroLink">HERO</a>
+                </li>
+                <li class="green">
+                    <a href="#" id="flexboxGridLink">Flexbox Grid</a>
+                </li>
+                <li class="blue">
+                    <a href="#" id="gridLink">Grid</a>
+                </li>
+            </ul>
+        </nav>
+        <div id="flexbox2" class="column center">
             <div class="box red"></div>
             <div class="box blue"></div>
         </div>
         <div id="flexbox3" class="fillSpace">
-            <div class="box red"></div>
-            <div class="box blue"></div>
             <div class="box green"></div>
-            <div class="box red"></div>
             <div class="box blue"></div>
-            <div class="box green"></div>
-            <img src="assets/images/clouds.gif" class="box red">
-            <div class="box blue"></div>
-            <div class="box green"></div>
             <div class="box red"></div>
-            <div class="box blue">
+            <div class="box green"></div>
+            <img src="assets/images/clouds.gif" class="box blue">
+            <div class="box red"></div>
+            <div class="box green"></div>
+            <div class="box blue"></div>
+            <div class="box red">
                 <img src="assets/images/forest.gif">
             </div>
             <div class="box green"></div>
+            <div class="box blue"></div>
+            <div class="box red"></div>
         </div>
-        <div id="grid" class="noBoxMargin threeUnequalColumns withUnequalGaps">
-            <div class="box red"></div>
-            <div class="box blue"></div>
+        <div id="grid" class="threeColumns">
             <div class="box green"></div>
-            <div class="box red"></div>
             <div class="box blue"></div>
-            <div class="box green"></div>
-            <img src="assets/images/clouds.gif" class="box red">
-            <div class="box blue"></div>
-            <div class="box green"></div>
             <div class="box red"></div>
-            <div class="box blue">
+            <div class="box green"></div>
+            <img src="assets/images/clouds.gif" class="box blue">
+            <div class="box red"></div>
+            <div class="box green"></div>
+            <div class="box blue"></div>
+            <div class="box red">
                 <img src="assets/images/forest.gif">
             </div>
             <div class="box green"></div>
+            <div class="box blue"></div>
+            <div class="box red"></div>
         </div>
         <script src="js/lastExample.js"></script>
     </body>
