--- a/scratchpad/polltest.html
+++ b/scratchpad/polltest.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script type="text/javascript">
         var jsondata = {"iscoming": true,"isnotcoming": false};
         var settings = {
