--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,13 +58,13 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 3/20 (Day 1)</h1>
+    <h1>GDWD 105 Agenda for 3/21 (Day 2)</h1>
     <div id="agenda">
-      <h2>Announcements (8:05)</h2>
+      <h2>Announcements (9:05)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-9:50): Introductions & Quiz (Ungraded!)</h2>
-      <h2>Period 2 (10:10-11:50): Intro to Text Editors and Github</h2>
-      <h2>Period 3 (12:40-2:20): Code Skeleton and Hello World Exercises</h2>
+      <h2>Period 1 (9am-9:50): Code Skeleton Review | Github Revisited</h2>
+      <h2>Period 2 (10:10-11:50): Intro to HTML | Hello World Exercise</h2>
+      <h2>Period 3 (12:40-2:20): More HTML | Lab Time</h2>
       <h2>Period 4 (2:30pm-2:45pm): Wrap-up</h2>
     </div>
 
