--- a/examples/intermediate_html.html
+++ b/examples/intermediate_html.html
@@ -30,5 +30,7 @@
 
         <!-- Local Image -->
         <img src="images/goat.jpeg">
+        <img src="images/derplander.jpeg">
+        <img src="images/endwalker.jpeg">
     </body>
 </html>
